<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_registros"
    tools:context="xyz.carosdrean.projects.medidors.fragments.SobreMi">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        style="@style/card">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="65dp"
            android:paddingRight="65dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:id="@+id/ic_portada_sobre"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descripcion"
        android:layout_below="@+id/titulo"
        style="@style/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ic_descripcion"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_descripcion"
                    style="@style/titulos"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:layout_marginBottom="15dp"
                android:textColor="@color/negroClaro"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>



        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acercade"
        android:layout_below="@id/descripcion"
        style="@style/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ic_acercade"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_acercade"
                    style="@style/titulos"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/situacion"
                android:text="@string/acercade"
                android:layout_marginBottom="15dp"
                android:textColor="@color/negroClaro"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/footer"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>