<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="xyz.carosdrean.projects.medidors.fragments.Registros">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/fondo_registros"
            android:paddingBottom="75dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:id="@+id/ic_portada_registros"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/ic_comovoy"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_como_voy"
                            style="@style/titulos"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:id="@+id/estado"
                        android:src="@drawable/amarillo"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/situacion"
                        android:text="@string/amarillo"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/negroClaro"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height=".3dp"
                        android:background="@color/linea"
                        android:layout_marginTop="3dp"
                        android:orientation="vertical">

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/agregar"
                        style="@style/btn_card"
                        android:text="AGREGAR REGISTRO"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/ic_registrodia"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_registros_dia"
                            style="@style/titulos"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tiempo_orar"
                                android:textColor="@color/negroClaro"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:text="@string/horaInicial"
                                android:id="@+id/tvOrado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16dp"
                                android:layout_marginRight="20dp"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"/>

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height=".3dp"
                            android:background="@color/linea"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:orientation="vertical">

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tiempo_leer"
                                android:textColor="@color/negroClaro"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:id="@+id/tvLeido"
                                android:text="@string/horaInicial"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:textSize="16dp"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"/>
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height=".3dp"
                            android:background="@color/linea"
                            android:layout_marginTop="3dp"
                            android:orientation="vertical">

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/agregar2"
                            style="@style/btn_card"
                            android:text="AGREGAR REGISTRO"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/ic_estadistica"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_estadistica"
                            style="@style/titulos"/>

                    </LinearLayout>

                    <com.jjoe64.graphview.GraphView
                        android:layout_width="match_parent"
                        android:layout_height="200dip"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/graph" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/ic_mes"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_resgistro_mes"
                            style="@style/titulos"/>

                    </LinearLayout>

                    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mcv_showOtherDates="all"
                        android:id="@+id/calendarioR"
                        app:mcv_selectionColor="@color/colorAccent">

                    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
